# fluxer-rs

./: .gitignore  Cargo.toml  README.md  shell.nix
.devcontainer/: devcontainer.json  setup.sh
examples/examplebot/: Cargo.toml  README.md
examples/examplebot/src/: commands.rs  dispatch.rs  main.rs
examples/examplebot/src/commands/: addrole.rs  createrole.rs  deleterole.rs  edit.rs  ping.rs  react.rs  remove_react.rs  removerole.rs
fluxer-rs/: Cargo.toml  README.md
fluxer-rs/src/: fluxerbot.rs  lib.rs
fluxer-rs/src/api/: handler.rs
fluxer-rs/src/gateway/: mod.rs
fluxer-rs/src/gateway/dispatch_data/: basic.rs  guild.rs  message.rs  mod.rs  ready.rs  types.rs
fluxer-rs/src/gateway/op_handlers/: dispatch.rs  heartbeat.rs  identify.rs  mod.rs
fluxer-rs/src/gateway/serde/: mod.rs  receive_serde.rs  send_serde.rs
macros/: Cargo.toml
macros/src/: command.rs  dispatch.rs  lib.rs  register_command.rs
npins/: sources.json
src/: api.rs  error.rs  fluxerbot.rs  gateway.rs  lib.rs  main.rs  util.rs
src/api/: calls.rs  common.rs  data_structure.rs  mod.rs
src/api/calls/: channel.rs
src/api/calls/channel/: message.rs  reaction.rs
src/api/calls/channel/message/: edit.rs  fetch.rs  send.rs
src/api/calls/channel/reaction/: add_own.rs  remove_all.rs
src/api/calls/guilds/: role.rs
src/api/calls/guilds/role/: add_to_member.rs  create.rs  delete.rs  remove_from_member.rs
src/api/channels/: messages.rs  mod.rs  reactions.rs
src/api/data_structure/: embed.rs  message.rs  reaction.rs  role.rs
src/api/guilds/: roles.rs
src/gateway/: data_structure.rs  dispatch.rs  heartbeat.rs  identify.rs  mod.rs  op_handlers.rs  serde.rs
src/gateway/data_structure/: common.rs  guild.rs  message.rs  user.rs
src/gateway/op_handlers/: dispatch.rs  heartbeat.rs  identify.rs
src/gateway/serde/: deserialize.rs  serialize.rs
src/high_level/: command_handler.rs
src/serde/: gateway.rs  mod.rs  types.rs
src/serde/types/: common.rs  gateway.rs  guild.rs  message.rs  user.rs
