[package]
name = "fluxer-rs"
version = "0.1.3"
edition = "2024"
license = "MIT"
description = "A rust framework for interacting with fluxer instances"
homepage = "https://git.killuaa.dev/roufpup/fluxer-rs"
repository = "https://git.killuaa.dev/roufpup/fluxer-rs"
readme = "README.md"

[workspace]
members = ["examples/examplebot", "macros"]

[dependencies]
anyhow = "1.0.102"
async-trait = "0.1.89"
derive_builder = "0.20.2"
log = "0.4.29"
serde_json = "1.0.149"
serde_with = "3.16.1"
fluxer-rs-macros = { git = "https://git.awoo.ren/roufpup/fluxer-rs", version = "0.1.0" }
thiserror = "2.0.18"
reqwest = "0.13.2"
emojis = "0.8.0"

[dependencies.ezsockets]
version = "0.7.1"
features = ["rustls"]

[dependencies.tokio]
version = "1.49.0"
features = ["rt-multi-thread", "macros"]

[dependencies.serde]
version = "1.0.228"
features = ["derive"]
