[package]
name = "fluxer-rs"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "A rust implementation of the fluxer api to be used on fluxer.app and other self hosted instances"
homepage = "https://git.killuaa.dev/roufpup/colorbot"
repository = "https://git.killuaa.dev/roufpup/colorbot"
readme = "README.md"

[dependencies]
async-trait = "0.1.89"
log = "0.4.29"
serde_json = "1.0.149"

[dependencies.ezsockets]
version = "0.7.1"
features = ["rustls"]

[dependencies.tokio]
version = "1.49.0"
features = ["rt-multi-thread", "macros"]

[dependencies.serde]
version = "1.0.228"
features = ["derive"]
