[package]
name = "fluxer-rs-macros"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "Proc macros for use in fluxer-rs"
homepage = "https://git.killuaa.dev/roufpup/fluxer-rs"
repository = "https://git.killuaa.dev/roufpup/fluxer-rs"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2", features = ["full"] }
quote = "1"
heck = "0.5.0"
log = "0.4.29"
proc-macro2 = "1.0.106"
