[package]
name = "colorbot"
version = "0.1.0"
edition = "2024"


[dependencies]
env_logger = "0.11.9"
image = "0.25.9"
log = "0.4.29"
minreq = { version = "2.14.1", features = ["https"] }
turso = "0.4.4"

[dependencies.fluxer-rs]
version = "*"
path = "../.."

[dependencies.tokio]
version = "1.49.0"
features = ["rt-multi-thread", "macros"]
